--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/ramizmurtaza/contact-app/issues"
   },
   "homepage": "https://github.com/ramizmurtaza/contact-app#readme",
   "dependencies": {
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mysql2": "^3.15.3",
+    "sequelize": "^6.37.7"
   }
 }
