feat(config): add environment-specific config support
- Add .env files for development, uat and production environments
- Update database and sequelize config to load env based on NODE_ENV
- Add uat environment to sequelize config
- Update package.json scripts for uat and production environments
- Update README with new environment setup and usage instructions

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --watch \"src/**/*.ts\" --exec \"node --loader ts-node/esm\" src/index.ts",
+    "uat": "cross-env NODE_ENV=uat node dist/index.js",
+    "production": "cross-env NODE_ENV=production node dist/index.js",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "start:staging": "cross-env NODE_ENV=staging node dist/index.js",
     "build": "tsc",
@@ -13,12 +15,16 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "migration:generate": "sequelize-cli migration:generate --name",
     "migration:run": "sequelize-cli db:migrate",
+    "migration:run:uat": "sequelize-cli db:migrate --env uat",
+    "migration:run:prod": "sequelize-cli db:migrate --env production",
     "migration:revert": "sequelize-cli db:migrate:undo",
     "migration:revert:all": "sequelize-cli db:migrate:undo:all",
     "migration:run:to": "sequelize-cli db:migrate --to",
     "migration:revert:to": "sequelize-cli db:migrate:undo --to",
     "seed:generate": "sequelize-cli seed:generate --name",
     "seed:run": "sequelize-cli db:seed:all",
+    "seed:run:uat": "sequelize-cli db:seed:all --env uat",
+    "seed:run:prod": "sequelize-cli db:seed:all --env production",
     "seed:undo": "sequelize-cli db:seed:undo",
     "seed:undo:all": "sequelize-cli db:seed:undo:all",
     "seed:run:one": "sequelize-cli db:seed --seed",
